# MYTH-CLI

./: .dockerignore  .gitignore  CNAME  Cargo.toml  LICENSE  README.md  SHA256SUMS  bootstrap.sh  implementation_plan.md  index.html  install.sh  myth-private.key  myth.gpg  uninstall.sh  update.sh  user.yaml  versions.json
.github/workflows/: deploy-docs.yml  release.yml
arch/: README  myth.db  myth.db.tar.gz.old  myth.files  myth.files.tar.gz.old
assets/: ArchitecturePage-ouG6NpUb.js  BuiltinToolsPage-C2A1WI1R.js  CliCommandsPage-C3KkF0zx.js  CommandRunnersPage-Dkw5W6V9.js  ConfigurationPage-CCh2XmfU.js  CreatorPage-Cv2Ve-Cu.js  CustomMcpPage-BYxKU0Yj.js  CyberNode-D2Qh70_V.js  HomePage-CDuhDYwD.js  InstallationPage-tsLZZQPS.js  InteractiveCommandsPage-21elCTsC.js  McpServersPage-D3-EPJw6.js  MemoryPage-B37kJyg-.js  ProfilesPage-VRuviZmu.js  QuickStartPage-CwinrWZl.js  ScriptsPage-CY0jgXl2.js  SecurityPage-OTYXmtoG.js  SubdomainFetchPage-CH3HESlw.js  SystemGraph-BkOQ9sIO.js  TechStackPage-CPPh_fRA.js  ToolBridgesPage-DDGhO6hq.js  TypographyPage-D83ZsGus.js  VersionsPage-DsiA46o8.js  VitalsPage-HwQ9vxwv.js  framer-motion-BkDZnqVO.js  index-8zzc-TFp.js  index-BR-3dnU_.js  index-Bnd_AK8N.css  index-C1sJW_gP.css  index-CcIwtbNr.js  index-DRJ1kQkt.js  index-DcuCwMqK.css  index-XbqjTIOX.css  lucide-Cjrn-RS_.js  monaco-B3QCl-SO.js  react-vendor-CP2YzXna.js  react-vendor-Ce-acJl0.css  recharts-D0fPhU5R.js
completions/: _myth  myth  myth.fish
config/: agent.yaml  mcp.json  user.yaml
debian/: changelog
dists/stable/: InRelease  Release  Release.gpg
docs/: .gitignore  biome.json  index.html  myth.1  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
linux/: changelog  myth.desktop
package_runners/: Dockerfile  flake.nix  package.json  provision-browser.js  pyproject.toml  run.js  snapcraft.yaml
rpm/repodata/: 047ea4d8cc010aa1f42850821e2756118b0ce11d654052a0f3b5e51e3a4488fe-other.xml.zst  0e094dc2fc1fecef0583360028fc97d1b96ef2de39f6ae403e83421c1957424d-other.xml.zst  14032c66f9ecb2c22ed04523e004da3c9d784fdd6f199961e65d9a558d3cde4c-primary.xml.zst  15acc1cf16e0226822d4a53a42f9d44422b5afa76d51b731c8af1805502a8c9b-filelists.xml.zst  18d6abd1cafb915e4486fb8669d359b16dcc23c952e6229ca236a54136edce30-filelists.xml.zst  1aa97923cfb2a4b9eda7f5a3355ca6a031d666ff478908a23a282063f351412d-primary.xml.zst  1e137ea0f2d9aade6044445e840cdd0474dd5a6fe325bbbe0643ff0b29e9032d-other.xml.zst  2755a9022e6b49908cfab1d59682ccc72f792074a5e543a89e50b1770253e780-other.xml.zst  29c5efc8709cb0e4c68e0da8a690226d8baa9a46a81b95dc6e7e3e3117d8c837-other.xml.zst  2ceb2c4fea0f027ac2f8d763f4ed023df5c90f64871f553aefc9d614381c8e01-filelists.xml.zst  2d575542d29eb4752ad0e51962431fab7d3e3abee2b97d4ff7da325e486e2f94-other.xml.zst  2ddd7a110fc57c86184e67fbc46e6376428cdd64b6f7d5a90c52bcd1863d5df3-primary.xml.zst  3161b01607c2fb378ae670b0dfec17012a0b0cec2942166a7e7db3566470f770-other.xml.zst  33709087a796b75aa0fc9204fbe7e3f8f0e67d1b40394d366229bf6c0b4c9812-other.xml.zst  37462c16c940d45d53676e4823147601205236ec905a18ac96833cb3e4e36a2c-filelists.xml.zst  3ca01f8bec9345498ad5c34bca6fc62c3ed680b3d94fd20baef5a936c5035b85-primary.xml.zst  410be317978d643e9b1ee10f660ca43ee2311d490f2e0403b38e7197e8dba663-primary.xml.zst  4363ef1d48e5d58960be4158e3e4691f938ffd13ee647f7bec72362bc1f5d39e-primary.xml.zst  441c0c77bfa77474b93d810790a5020a2ae680271c98d8fa9f273b8c8a490069-primary.xml.zst  443152418421916da4fc2121a355aef06b92aa86960e597119b7327127f0d50b-primary.xml.zst  44fd3cb2bfbddd1433152280f030b3bb4b6bf707fdd54534080029534965481b-primary.xml.zst  4d8d1275abcfe3debfb9cc1f208b766697cacbfe8c2a90b94a031ef45716a96e-primary.xml.zst  4eac55f062ed45cdf4229494b4bd76860adb4d0084835f9c01b50c0e2ee32265-primary.xml.zst  506c3326fe3430b66841c58f4ebf5a875558ccc2ccd282a9693b24592d867db0-filelists.xml.zst  509e23434466a824c72e2da050375616c1d1e5fad0107039b6d0bcbff1bf166b-filelists.xml.zst  5423227d50f2f4e95da28f5b8aaf8d1d1704e270907c59830eb5cca766a68412-primary.xml.zst  57d6edafe0989461b626461291de9fcab110f5194dac486f30ca17a1cffc619a-primary.xml.zst  5fda7df846ecd1500829b7078189b9e149d56c2f225c1b5cfde49b322f23964b-primary.xml.zst  612974042f1f36c9ef35cba715d6719c3aab471246fb8a28eb709a64e1fbba7b-other.xml.zst  6200f0412351432d0075a76ce43ed8c508302d7c20adfe46a3e55297e3cf44de-filelists.xml.zst  658424dd8b6fa8ff748467cb091af8c36e0ae9e9a56a9207d7680fe87397d7ec-filelists.xml.zst  66b6c931baa40eba548304eedb22189bc33d1954806b94bb203dccc8105f0bca-filelists.xml.zst  72dd5ff0837e77dded6b347a17cb20dbd23e922f40cee19f83ee02302b10f4f4-filelists.xml.zst  73fdedeb88b10645b44e34edfa0aa235b184ad1b7844438dcf9f8cb3951e2a05-primary.xml.zst  7bd1abc11308492cdde8f487f19c9512d606019e2c20590072f6ce1ee65764e0-primary.xml.zst  7c2e6385c922b49330e858b34cacb1a937fbdf96e2b0cf41d508912b74d95c00-other.xml.zst  7cdf2f0b29c839a47e94ccda10b2708249f0b441a36c512164a0d9b428e3ba7a-primary.xml.zst  806b9d6a045ad4b361f4f20b43d026a2ab4f639bd9bf844305a98f9cfddff302-filelists.xml.zst  8651b1c834f89c0d769c73b8fe2722daa775bfef5f560e4739323f647dc0021c-filelists.xml.zst  8839f2cb23f75927b325e7f827ff33fdd4fd73ff36f6f508dd29519d1d28c9c1-other.xml.zst  (+27 more)
scripts/: bootstrap.sh  build_arch.sh  build_deb.sh  build_rpm.sh  conffiles  cross_build.sh  deploy_pages_local.sh  distribute.sh  generate-version-manifest.sh  init_repo.sh  install.sh  postinst  postrm  preinst  prerm  release_local.sh  sync-agent-metadata.sh  test.sh  uninstall.sh  update.sh  verify.sh
src/: cli.rs  interactive.rs  lib.rs  main.rs  markdown_renderer.rs  signals.rs  stream.rs  test_dns.rs
src/builtin_mcp/: mod.rs
src/builtin_tools/: mod.rs  registry.rs
src/config/: context.rs  mod.rs  settings.rs  watcher.rs
src/core/: agent.rs  commands.rs  docs.rs  health.rs  mod.rs  persistence.rs  recon_graph.rs  session.rs
src/llm/: mod.rs  nim_client.rs  prompts.rs  tools.rs
src/mcp/: client.rs  config.rs  discover.rs  execute.rs  mod.rs  schemas.rs  server.rs  tor.rs
src/memory/: embeddings.rs  qdrant.rs
src/sandbox/: bwrap.rs  mod.rs  policy.rs  (+1 more)
(+73 files in other folders)
