[package]
name = "myth"
version = "0.1.0"
edition = "2021"
description = "An ultra-fast AI-powered reconnaissance agent for Kali Linux"
authors = ["Shesher Hasan"]
license = "MIT"
readme = "README.md"
homepage = "https://myth.work.gd"
default-run = "myth"


[dependencies]
# ═══ Async Runtime ═══
tokio = { version = "1", features = ["full"] }

# ═══ Agent Brain (Rig) ═══
rig-core = "0.32.0"

# ═══ MCP Protocol ═══
rust-mcp-sdk = { version = "0.8.3", features = ["server", "client"] }
rust-mcp-schema = "0.9.6"

# ═══ State Machine ═══
petgraph = { version = "0.6", default-features = false, features = ["serde-1"] }
dashmap = "6"
bytes = "1"

# ═══ Serialization ═══
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json-patch = "0.3"
zstd = "0.13"
memmap2 = "0.9"
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"
xattr = "1"
rayon = "1.10"

# ═══ TUI ═══
ratatui = "0.30"
crossterm = "0.29"

# ═══ CLI & Config ═══
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rustyline = "17.0"

# ═══ System ═══
nix = { version = "0.29", features = ["process", "signal", "fs"] }

# ═══ Utilities ═══
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
schemars = "1.2.1"
indicatif = "0.18.4"
owo-colors = "4.3.0"
notify = "8.2.0"
comrak = "0.36"
reqwest = { version = "0.12.12", features = ["json", "stream", "brotli", "deflate", "zstd", "gzip", "socks"] }
reqwest-eventsource = "0.6.0"
sha2 = "0.10.9"
rand = "0.10.0"
hex = "0.4.3"
scraper = "0.25.0"
url = "2.5.8"
base64 = "0.22.1"
flate2 = "1.1.9"
brotli = "8.0.2"
headless_chrome = "1.0.21"
fantoccini = "0.22.1"
urlencoding = "2"
anyhow = "1.0.102"
async-recursion = "1.1.1"
bloom_filter = "0.1.0"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime", "dnssec"] }
trust-dns-proto = { version = "0.23", features = ["dnssec", "tokio-runtime"] }
trust-dns-client = "0.23"
once_cell = "1.21.4"
tokio-native-tls = "0.3"
native-tls = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.27.0"

# ═══ .deb Packaging (cargo-deb) ═══
[package.metadata.deb]
name = "myth"
maintainer = "MYTH Development Team <contact@myth.work.gd>"
copyright = "2026, MYTH Development Team"
license-file = ["LICENSE", "0"]
extended-description = """
MYTH is an ultra-powerful, tactical AI reconnaissance agent designed for 
high-fidelity asset discovery and attack surface mapping. 
It features a unified neural link system with persistent session memory, 
sandboxed execution via Bubblewrap, and advanced MCP tool discovery."""
section = "net"
priority = "optional"
maintainer-scripts = "scripts"
depends = "bubblewrap (>= 0.6), libc6 (>= 2.31)"
assets = [
    ["target/release/myth", "usr/bin/myth", "755"],
    ["config/user.yaml", "etc/myth/user.yaml", "644"],
    ["README.md", "usr/share/doc/myth/README.md", "644"],
    ["LICENSE", "usr/share/doc/myth/copyright", "644"],
    ["docs/myth.1", "usr/share/man/man1/myth.1.gz", "644"],
    ["debian/changelog", "usr/share/doc/myth/changelog.Debian.gz", "644"],
    ["completions/myth", "usr/share/bash-completion/completions/myth", "644"],
    ["completions/_myth", "usr/share/zsh/vendor-completions/_myth", "644"],
    ["completions/myth.fish", "usr/share/fish/vendor_completions.d/myth.fish", "644"],
]
